--- a/src/components/Forms/Form.scss
+++ b/src/components/Forms/Form.scss
@@ -1,16 +1,4 @@
-.form-container {
-  width: 90%;
-
-  @media (min-width: 768px) {
-    width: 50%;
-  }
-
-  @media (min-width: 1200px) {
-    width: 33%;
-  }
-}
-
-.form {
+form {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
