--- a/src/components/Forms/Form.scss
+++ b/src/components/Forms/Form.scss
@@ -1,4 +1,16 @@
-form {
+.form-container {
+  width: 90%;
+
+  @media (min-width: 768px) {
+    width: 50%;
+  }
+
+  @media (min-width: 1200px) {
+    width: 33%;
+  }
+}
+
+.form {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
