--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -4,9 +4,11 @@
     top: 0;
     z-index: 1;
     width: 100%;
-    height: 10vh;
+    height: 8vh;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
     background-color: #f5f5f5;
   }
 
@@ -18,6 +20,6 @@
   }
 
   main {
-    padding: 10vh 0 0;
+    padding: 8vh 0 0;
   }
 }
