--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -17,6 +17,10 @@
     bottom: 0;
     left: 0;
     padding: 0.5rem;
+
+    .MuiFab-primary {
+      background: #2A5777 !important;
+    }
   }
 
   main {
